# ChangeLog for games-simulation/secondlife-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/secondlife-bin/Attic/ChangeLog,v 1.1 2008/11/27 06:39:18 lavajoe Exp $

*secondlife-bin-1.22.1.103637 (27 Nov 2008)
*secondlife-bin-1.21.6.99587 (27 Nov 2008)

  27 Nov 2008; Joe Peterson <lavajoe@gentoo.org> +metadata.xml,
  +secondlife-bin-1.21.6.99587.ebuild, +secondlife-bin-1.22.1.103637.ebuild:
  New package: Second Life viewer binary
  Contributed by Toei Rei <toei.rei@stargazer.at>
