@@ -1,6 +1,6 @@
 DIST SecondLife-i686-1.21.6.99587.tar.bz2 37651707 RMD160 cf704a3501059da6b18ec09b8914ddb671ec9ace SHA1 ffbe865b5c9632f8ee75249be0150ec80c2ac1b6 SHA256 3c502401b673dada8ddb1412953a3984f17454913c552791153a175614d66509
 DIST SecondLife-i686-1.22.1.103637.tar.bz2 37622739 RMD160 62cdbd66cfb87b86178a815efe8c9e4a72e14085 SHA1 178241cff6bf0bb38d8c8f7476aa776e66e6cda7 SHA256 a121911bdedd178a2445694d8b6bf25ee6ffcbdb73e3f1b9aa745b29a2224fd8
 EBUILD secondlife-bin-1.21.6.99587.ebuild 2473 RMD160 02364483a97b5f910455134b986e6b15437c536b SHA1 3051a40117aa9c79ce431207a6a3c30b3f9e16c8 SHA256 330f4995186df9107febb0a14e31bfcb83f6dd93e7f94623ca5cf25ab2309522
-EBUILD secondlife-bin-1.22.1.103637.ebuild 2483 RMD160 fb27f512e038d4b2dcbf336620c0174b6f9f50a5 SHA1 f15434fee82a0e15683581a25ecc7ce8044afee9 SHA256 4c0ece261de16fcf7d9b1b05dd8a8e5e449c37da3ed9c854fccc177e444269ea
-MISC ChangeLog 557 RMD160 f06ffbfe4dfcfa6ebed4d5de5fb4221e7f1afb52 SHA1 e226edf45e170ef9d37ba877547913996d85e2e1 SHA256 6fa552a6e4acd350ffc5c7efe554dec55ccadd19e8c276682d28b64edadefed8
+EBUILD secondlife-bin-1.22.1_rc103637.ebuild 2609 RMD160 ee6cf15b0c95c2cba4b5f9f072039690d17e37eb SHA1 40406d45e3a15ce0eb5fc50838f9743495c0d815 SHA256 5dc972bb451d3c68d5b11a4f1c56f819f8d8f5c4590772b8715edb9791418380
+MISC ChangeLog 799 RMD160 1f0202ae18b43e90547a985d8e4171264ebc474c SHA1 358bc22f89da79f4b7ca33ead1fa4b93f57a3f86 SHA256 63cb180f1eaac6773e437652386912bf92204d16afdd3d226f48862cd21b3a6c
 MISC metadata.xml 289 RMD160 76fca0dfc52fa8691df197d43fc27a697567f366 SHA1 84f04ebf4585cb4ccab8a6e9c99902de606f39bf SHA256 d7a9ef681e6b516ca3c4f4c6e0a605b7479f9790efacdd605c78fc30b9daca11
